@@ -1,4 +1,7 @@
 TODO:
+* This file is mostly used for maintaining ideas about what/where/when new
+* features will be added to jsXe. It is in no way official as tasks may be moved
+* from version to version and added or dropped.
 
 * General
 
