@@ -1,3 +1,10 @@
+04/29/2005  Ian Lewis <IanLewis@member.fsf.org>
+
+    * Fixed a bug in XMLDocument that caused null pointer exceptions to be
+      thrown when setting the format XML option and the validation option
+      in the options at the same time.
+    * Added support for adding entity reference nodes to the document.
+
 04/28/2005  Ian Lewis <IanLewis@member.fsf.org>
 
     * getAllowedElements() in AdapterNode.java now sorts the elements
